--- a/portal/html/USR-1330-F-LIST.html
+++ b/portal/html/USR-1330-F-LIST.html
@@ -322,48 +322,12 @@
                     <h3>커뮤니티</h3>
                     <span>벤처투자에 관심있는 모든 구성원이 소통하는 공간입니다.</span>
                 </div>
-    
 
-                <!-- 목적 -->
+                <!-- 주제 -->
                 <div class="search_item">
 
                     <div class="tit_box">
-                        <h4><span></span>목적</h4>
-                    </div>
-
-                    <ul class="chk_list type_03">
-                        <li>
-                            <div class="chk_box">
-                                <span>
-                                    <input type="checkbox" id="chk_01">
-                                    <label for="chk_01">전체</label>
-                                </span>
-                                <span>
-                                    <input type="checkbox" id="chk_02">
-                                    <label for="chk_02">친목/모임</label>
-                                </span>
-                                <span>
-                                    <input type="checkbox" id="chk_03">
-                                    <label for="chk_03">정보공유</label>
-                                </span>
-                                <span>
-                                    <input type="checkbox" id="chk_04">
-                                    <label for="chk_04">교육/스터디</label>
-                                </span>
-                                <span>
-                                    <input type="checkbox" id="chk_05">
-                                    <label for="chk_05">지역/동문</label>
-                                </span>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-
-                <!-- 관심업종 -->
-                <div class="search_item">
-
-                    <div class="tit_box">
-                        <h4><span></span>관심업종</h4>
+                        <h4><span></span>주제</h4>
                     </div>
 
                     <ul class="chk_list type_02">
@@ -418,51 +382,47 @@
                     </ul>
 
                 </div>
-                
-                <!-- 대상 -->
+
+                <!-- 목적 -->
                 <div class="search_item">
 
                     <div class="tit_box">
-                        <h4><span></span>대상</h4>
+                        <h4><span></span>목적</h4>
                     </div>
 
                     <ul class="chk_list type_03">
                         <li>
                             <div class="chk_box">
                                 <span>
-                                    <input type="checkbox" id="chk_06">
-                                    <label for="chk_06">전체</label>
+                                    <input type="checkbox" id="chk_01">
+                                    <label for="chk_01">전체</label>
                                 </span>
                                 <span>
-                                    <input type="checkbox" id="chk_07">
-                                    <label for="chk_07">스타트업</label>
+                                    <input type="checkbox" id="chk_02">
+                                    <label for="chk_02">친목/모임</label>
                                 </span>
                                 <span>
-                                    <input type="checkbox" id="chk_08">
-                                    <label for="chk_08">엔젤투자자</label>
+                                    <input type="checkbox" id="chk_03">
+                                    <label for="chk_03">정보공유</label>
                                 </span>
                                 <span>
-                                    <input type="checkbox" id="chk_09">
-                                    <label for="chk_09">창업기획자</label>
+                                    <input type="checkbox" id="chk_04">
+                                    <label for="chk_04">교육/스터디</label>
                                 </span>
                                 <span>
-                                    <input type="checkbox" id="chk_10">
-                                    <label for="chk_10">창투사</label>
-                                </span>
-                                <span>
-                                    <input type="checkbox" id="chk_11">
-                                    <label for="chk_11">기관</label>
+                                    <input type="checkbox" id="chk_05">
+                                    <label for="chk_05">지역/동문</label>
                                 </span>
                             </div>
                         </li>
                     </ul>
                 </div>
 
-                <!-- 커뮤니티 -->
+                <!-- 커뮤니티명 -->
                 <div class="search_item">
 
                     <div class="tit_box">
-                        <h4><span></span>커뮤니티</h4>
+                        <h4><span></span>커뮤니티명</h4>
                     </div>
 
                     <div class="search_form_group">
@@ -493,27 +453,17 @@
                         <ul>
                             <li>
                                 <div class="btn_box">
-                                    <button>커뮤니티 생성일로 정렬 ▼</button>
+                                    <a href="./USR-1331-F-DASH.html">내 커뮤니티</a>
                                 </div>
                             </li>
                             <li>
                                 <div class="btn_box">
-                                    <button>회원수로 정렬 ▲</button>
+                                    <a href="./USR-1332-B-LIST.html">커뮤니티 일정</a>
                                 </div>
                             </li>
                             <li>
                                 <div class="btn_box">
-                                    <a href="">내 커뮤니티</a>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="btn_box">
-                                    <a href="">커뮤니티 일정</a>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="btn_box">
-                                    <a href="" class="comu_add">커뮤니티 개설</a>
+                                    <a href="./USR-1333-F-FORM.html" class="comu_add">커뮤니티 개설</a>
                                 </div>
                             </li>
                         </ul>
@@ -523,7 +473,7 @@
 
                     <ul>
                         <li>
-                            <a href="">
+                            <a href="./USR-1334-F-DASH.html">
                                 <div class="img">
                                     <img src="../images/content/newsletter.png" alt="임시이미지">
                                 </div>
@@ -534,8 +484,8 @@
                                     <div class="tit">커뮤니티명</div>
                                     <div class="info">
                                         <div>
-                                            <span>개설일</span>
-                                            <span>커뮤니티 회원수</span>
+                                            <span>개설일 2022-09-01</span>
+                                            <span>회원수 100명</span>
                                         </div>
                                         <span class="introduce">커뮤니티 소개, 설명 등</span>
                                     </div>
@@ -543,7 +493,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="./USR-1334-F-DASH.html">
                                 <div class="img">
                                     <img src="../images/content/newsletter.png" alt="임시이미지">
                                 </div>
@@ -554,8 +504,8 @@
                                     <div class="tit">커뮤니티명</div>
                                     <div class="info">
                                         <div>
-                                            <span>개설일</span>
-                                            <span>커뮤니티 회원수</span>
+                                            <span>개설일 2022-09-01</span>
+                                            <span>회원수 100명</span>
                                         </div>
                                         <span class="introduce">커뮤니티 소개, 설명 등</span>
                                     </div>
@@ -563,7 +513,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="./USR-1334-F-DASH.html">
                                 <div class="img">
                                     <img src="../images/content/newsletter.png" alt="임시이미지">
                                 </div>
@@ -574,8 +524,8 @@
                                     <div class="tit">커뮤니티명</div>
                                     <div class="info">
                                         <div>
-                                            <span>개설일</span>
-                                            <span>커뮤니티 회원수</span>
+                                            <span>개설일 2022-09-01</span>
+                                            <span>회원수 100명</span>
                                         </div>
                                         <span class="introduce">커뮤니티 소개, 설명 등</span>
                                     </div>
@@ -583,7 +533,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="./USR-1334-F-DASH.html">
                                 <div class="img">
                                     <img src="../images/content/newsletter.png" alt="임시이미지">
                                 </div>
@@ -594,8 +544,8 @@
                                     <div class="tit">커뮤니티명</div>
                                     <div class="info">
                                         <div>
-                                            <span>개설일</span>
-                                            <span>커뮤니티 회원수</span>
+                                            <span>개설일 2022-09-01</span>
+                                            <span>회원수 100명</span>
                                         </div>
                                         <span class="introduce">커뮤니티 소개, 설명 등</span>
                                     </div>
@@ -603,7 +553,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="./USR-1334-F-DASH.html">
                                 <div class="img">
                                     <img src="../images/content/newsletter.png" alt="임시이미지">
                                 </div>
@@ -614,8 +564,8 @@
                                     <div class="tit">커뮤니티명</div>
                                     <div class="info">
                                         <div>
-                                            <span>개설일</span>
-                                            <span>커뮤니티 회원수</span>
+                                            <span>개설일 2022-09-01</span>
+                                            <span>회원수 100명</span>
                                         </div>
                                         <span class="introduce">커뮤니티 소개, 설명 등</span>
                                     </div>
@@ -623,7 +573,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="./USR-1334-F-DASH.html">
                                 <div class="img">
                                     <img src="../images/content/newsletter.png" alt="임시이미지">
                                 </div>
@@ -634,8 +584,8 @@
                                     <div class="tit">커뮤니티명</div>
                                     <div class="info">
                                         <div>
-                                            <span>개설일</span>
-                                            <span>커뮤니티 회원수</span>
+                                            <span>개설일 2022-09-01</span>
+                                            <span>회원수 100명</span>
                                         </div>
                                         <span class="introduce">커뮤니티 소개, 설명 등</span>
                                     </div>
@@ -643,7 +593,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="">
+                            <a href="./USR-1334-F-DASH.html">
                                 <div class="img">
                                     <img src="../images/content/newsletter.png" alt="임시이미지">
                                 </div>
@@ -654,8 +604,8 @@
                                     <div class="tit">커뮤니티명</div>
                                     <div class="info">
                                         <div>
-                                            <span>개설일</span>
-                                            <span>커뮤니티 회원수</span>
+                                            <span>개설일 2022-09-01</span>
+                                            <span>회원수 100명</span>
                                         </div>
                                         <span class="introduce">커뮤니티 소개, 설명 등</span>
                                     </div>
