--- a/portal/html/USR-1350-F-LIST.html
+++ b/portal/html/USR-1350-F-LIST.html
@@ -342,6 +342,12 @@
                                         피신고인 이름
                                         <span>JB인베스트먼트㈜</span>
                                     </div>
+                                    <div class="declaration_name">
+                                        <dl>
+                                            <dt>신고접수기관</dt>
+                                            <dd>신고접수기관명</dd>
+                                        </dl>
+                                    </div>
                                     <div class="post_info">
                                         <dl>
                                             <dt>등록일</dt>
@@ -367,6 +373,12 @@
                                     <div class="tit">
                                         피신고인 이름
                                         <span>JB인베스트먼트㈜</span>
+                                    </div>
+                                    <div class="declaration_name">
+                                        <dl>
+                                            <dt>신고접수기관</dt>
+                                            <dd>신고접수기관명</dd>
+                                        </dl>
                                     </div>
                                     <div class="post_info">
                                         <dl>
@@ -394,6 +406,12 @@
                                         피신고인 이름
                                         <span>JB인베스트먼트㈜</span>
                                     </div>
+                                    <div class="declaration_name">
+                                        <dl>
+                                            <dt>신고접수기관</dt>
+                                            <dd>신고접수기관명</dd>
+                                        </dl>
+                                    </div>
                                     <div class="post_info">
                                         <dl>
                                             <dt>등록일</dt>
@@ -420,6 +438,12 @@
                                         피신고인 이름
                                         <span>JB인베스트먼트㈜</span>
                                     </div>
+                                    <div class="declaration_name">
+                                        <dl>
+                                            <dt>신고접수기관</dt>
+                                            <dd>신고접수기관명</dd>
+                                        </dl>
+                                    </div>
                                     <div class="post_info">
                                         <dl>
                                             <dt>등록일</dt>
@@ -446,6 +470,12 @@
                                         피신고인 이름
                                         <span>JB인베스트먼트㈜</span>
                                     </div>
+                                    <div class="declaration_name">
+                                        <dl>
+                                            <dt>신고접수기관</dt>
+                                            <dd>신고접수기관명</dd>
+                                        </dl>
+                                    </div>
                                     <div class="post_info">
                                         <dl>
                                             <dt>등록일</dt>
@@ -471,6 +501,12 @@
                                     <div class="tit">
                                         피신고인 이름
                                         <span>JB인베스트먼트㈜</span>
+                                    </div>
+                                    <div class="declaration_name">
+                                        <dl>
+                                            <dt>신고접수기관</dt>
+                                            <dd>신고접수기관명</dd>
+                                        </dl>
                                     </div>
                                     <div class="post_info">
                                         <dl>
