--- a/portal/html/USR-2210-F-LIST.html
+++ b/portal/html/USR-2210-F-LIST.html
@@ -277,11 +277,11 @@
     </aside>
 
     <!-- conteiner -->
-    <div id="container" class="container type_04">
+    <div id="container" class="container type_03">
         
         <!-- sub title -->
         <div class="tit_box sub_tit">
-            <h2>벤처투자포털</h2>
+            <h2>마이페이지</h2>
             <span>모든 벤처 투자 정보를 하나로</span>
         </div>
         <!-- //sub title -->
@@ -295,22 +295,10 @@
                     <li class="home">
                         <a href="">home</a>
                     </li>
-                    <li>
-                        <a href="javascript:void(0);">벤처투자포털</a>
-                        <ul>
-                            <li><a href="">벤처투자매칭</a></li>
-                            <li><a href="">투자가이드</a></li>
-                            <li><a href="">정보서비스</a></li>
-                        </ul>
-                    </li>
                     <li class="selected">
-                        <a href="javascript:void(0);">벤처투자 부당행위 신고센터</a>
+                        <a href="javascript:void(0);">사이트맵</a>
                         <ul>
-                            <li><a href="">공지사항</a></li>
-                            <li><a href="">포털소개</a></li>
-                            <li><a href="">커뮤니티</a></li>
-                            <li><a href="">벤처투자 TALK</a></li>
-                            <li><a href="">유관기관 안내</a></li>
+                            <li><a href="">사이트맵</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -319,84 +307,143 @@
             <div class="inner">
 
                 <div class="tit_box">
-                    <h3>벤처투자 부당행위 신고센터</h3>
-                    <span>벤처투자 부당행위 신고센터는 벤처투자와 관련된 불법 사항에 대해 유형별로 신고합니다.</span>
+                    <h3>사이트맵</h3>
+                    <span>메뉴에 대한 설명을 상세하게 작성합니다.</span>
                 </div>
-
-                <div class="tbl_box_detail type_02">
-                    <table>
-                        <caption>정보</caption>
-                        <colgroup>
-                            <col width="10%;">
-                            <col width="10%;">
-                            <col width="30%;">
-                            <col width="20%;">
-                            <col width="30%;">
-                        </colgroup>
-                        <tbody>
-                            <tr>
-                                <th scope="row" colspan="2"><label for="">신고 접수 기관</label></th>
-                                <td colspan="3">한국벤처투자</td>
-                            </tr>
-                            <tr>
-                                <th scope="row" colspan="2"><label for="">처리상태</label></th>
-                                <td>신고</td>
-                                <th scope="row"><label for="">신고일자</label></th>
-                                <td>2022-09-25</td>
-                            </tr>
-                            <tr>
-                                <th scope="row" rowspan="2"><label for="input_01">신고인정보</label></th>
-                                <th scope="row"><label for="input_01">회사명</label></th>
-                                <td>아사달</td>
-                                <th scope="row"><label for="input_02">성명<span class="req">*</span></label></th>
-                                <td>송은희</td>
-                            </tr>
-                            <tr>
-                                <th scope="row"><label for="sel_01">연락처<span class="req">*</span></label></th>
-                                <td>010-0000-0000</td>
-                                <th scope="row"><label for="input_10">이메일<span class="req">*</span></label></th>
-                                <td>dlapdlf@dlapdlf.com</td>
-                            </tr>
-                            <tr>
-                                <th scope="row"><label for="input_03">신고대상정보</label></th>
-                                <th scope="row"><label for="input_03">기관명</label></th>
-                                <td>JB인베스트먼트㈜</td>
-                                <th scope="row"><label for="input_04">성명<span class="req">*</span></label></th>
-                                <td>홍길돋</td>
-                            </tr>
-                            <tr>
-                                <th scope="row" colspan="2"><label for="">신고내용</label></th>
-                                <td colspan="3">상세내용</td>
-                            </tr>
-                            <tr class="bg">
-                                <th scope="row" colspan="2"><label for="">첨부파일</label></th>
-                                <td colspan="3">
-                                    <div class="file_download">
-                                        <div class="btn_box bg">
-                                            <a href="" class="download" download>전체 다운로드</a>
-                                        </div>
-                                        <ul>
-                                            <li><a href="" download>AAA.jpg</a></li>
-                                            <li><a href="" download>BBB.hwp</a></li>
-                                            <li><a href="" download>CCC.zip</a></li>
-                                        </ul>
-                                    </div>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>
-
-                <div class="btn_box_group type_tbl">
-                    <div class="btn_box bg">
-                        <a href="./USR-1350-F-FORM.html" class="btn_modi">수정</a>
-                    </div>
-                    <div class="btn_box bg">
-                        <a href="" class="btn_delete">삭제</a>
-                    </div>
-                    <div class="btn_box bg">
-                        <a href="./USR-1350-F-LIST.html" class="btn_list">목록</a>
-                    </div>
+    
+                <div class="sitemap_box">
+                    <dl>
+                        <dt>벤처투자매칭</dt>
+                        <dd>
+                            <ul>
+                                <li>
+                                    <a href="">투자유치 희망기업 검색</a>
+                                </li>
+                                <li>
+                                    <a href="">투자자 검색</a>
+                                </li>
+                                <li>
+                                    <a href="">통합공시</a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0);">벤처투자마트</a>
+                                    <ul>
+                                        <li><a href="">벤처투자마트란?</a></li>
+                                        <li><a href="">상담회 공지</a></li>
+                                        <li><a href="">FAQ</a></li>
+                                        <li><a href="">신청</a></li>
+                                        <li><a href="">신청정보 확인</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0);">주식유통정보 서비스</a>
+                                    <ul>
+                                        <li><a href="">VC 구주 유통망</a></li>
+                                        <li><a href="">구주거래정보망</a></li>
+                                        <li><a href="">M&A거래정보망</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl>
+                        <dt>투자가이드</dt>
+                        <dd>
+                            <ul>
+                                <li>
+                                    <a href="">가이드 A TO Z</a>
+                                </li>
+                                <li>
+                                    <a href="">맞춤투자 가이드</a>
+                                </li>
+                                <li>
+                                    <a href="">FAQ</a>
+                                </li>
+                                <li>
+                                    <a href="">용어사전</a>
+                                </li>
+                                <li>
+                                    <a href="">교육</a>
+                                </li>
+                                <li>
+                                    <a href="">벤처투자상담</a>
+                                </li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl>
+                        <dt>정보서비스</dt>
+                        <dd>
+                            <ul>
+                                <li>
+                                    <a href="">정책</a>
+                                </li>
+                                <li>
+                                    <a href="">법령</a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0);">통계</a>
+                                    <ul>
+                                        <li><a href="">대시보드</a></li>
+                                        <li><a href="">투자실적</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0);">자료실</a>
+                                    <ul>
+                                        <li><a href="">보고서</a></li>
+                                        <li><a href="">뉴스레터 웹진</a></li>
+                                        <li><a href="">발행물</a></li>
+                                        <li><a href="">서식</a></li>
+                                        <li><a href="">프로그램</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0);">구인구직</a>
+                                    <ul>
+                                        <li><a href="">채용공고</a></li>
+                                        <li><a href="">인력Pool</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0);">업무처리지원</a>
+                                    <ul>
+                                        <li><a href="">VC 경력 확인</a></li>
+                                        <li><a href="">신청내역확인</a></li>
+                                    </ul>
+                                </li>
+                            </ul>
+                        </dd>
+                    </dl>
+                    <dl>
+                        <dt>벤처투자포털</dt>
+                        <dd>
+                            <ul>
+                                <li>
+                                    <a href="">포털소개</a>
+                                </li>
+                                <li>
+                                    <a href="">공지사항</a>
+                                </li>
+                                <li>
+                                    <a href="">커뮤니티</a>
+                                </li>
+                                <li>
+                                    <a href="">벤처투자 TALK</a>
+                                </li>
+                                <li>
+                                    <a href="javascript:void(0);">벤처투자 부당행위 신고센터</a>
+                                    <ul>
+                                        <li><a href="">부당행위 신고</a></li>
+                                        <li><a href="">신고내역확인</a></li>
+                                    </ul>
+                                </li>
+                                <li>
+                                    <a href="">유관기관 안내</a>
+                                </li>
+                            </ul>
+                        </dd>
+                    </dl>
                 </div>
 
             </div>
@@ -446,5 +493,57 @@
 
 </div>
 
+<!-- 쪽지보내기 팝업 -->
+<div id="note_01" class="dialog note_dialog">
+
+    <div class="tit_box">
+        <h3>쪽지보내기</h3>
+    </div>
+
+    <div class="tbl_box_data">
+        <table>
+            <caption>쪽지보내기</caption>
+            <colgroup>
+                <col width="20%;">
+                <col width="30%;">
+                <col width="20%;">
+                <col width="30%;">
+            </colgroup>
+            <tbody>
+                <tr>
+                    <th scope="row"><label for="radio_01">구분</label></th>
+                    <td colspan="3">투자제안</td>
+                </tr>
+                <tr>
+                    <th scope="row"><label for="input_02">제목</label></th>
+                    <td colspan="3">
+                        <div class="inp_box">
+                            <input type="text" id="input_02">
+                        </div>
+                    </td>
+                </tr>
+                <tr class="bg">
+                    <td colspan="4">
+                        <div class="inp_group">
+                            <div class="textarea_box cont">
+                                <textarea id="textarea_01"></textarea>
+                            </div>
+                        </div>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+
+    <div class="btn_box_group">
+        <div class="btn_box">
+            <a href="" class="btn_mint shadow">저장</a>
+        </div>
+        <div class="btn_box">
+            <a href="javascript:void(0);" class="btn_gray shadow pop_close">취소</a>
+        </div>
+    </div>
+
+</div>
 </body>
 </html>
