--- a/pub_list.html
+++ b/pub_list.html
@@ -457,9 +457,18 @@
                     division: '',
                     depth1:'통계 - 대시보드',
                     path:'./portal/html/USR-1220-F-DASH.html',
-                    date:'',
+                    date:'2022-09-23',
                     mdate:'2022-10-11',
-                    con:'작업중',
+                    con:'완료',
+                    etc:'[2차디자인]'
+                },
+                {
+                    division: '',
+                    depth1:'통계 - 투자실적',
+                    path:'./portal/html/USR-1221-F-DASH.html',
+                    date:'2022-09-23',
+                    mdate:'2022-10-11',
+                    con:'완료',
                     etc:'[2차디자인]'
                 },
                 {
@@ -657,27 +666,36 @@
                     division: '',
                     depth1:'커뮤니티 - 내 커뮤니티(TAB-2)',
                     path:'./portal/html/USR-1331-F-DASH.html',
-                    date:'',
+                    date:'2022-09-22',
                     mdate:'2022-09-15',
-                    con:'작업중',
+                    con:'완료',
+                    etc:'[1차디자인]'
+                },
+                {
+                    division: '',
+                    depth1:'커뮤니티 - 운영 중인 커뮤니티',
+                    path:'./portal/html/USR-1331-F-DASH.html',
+                    date:'2022-09-22',
+                    mdate:'2022-09-15',
+                    con:'완료',
                     etc:'[1차디자인]'
                 },
                 {
                     division: '',
                     depth1:'커뮤니티 - 개설',
                     path:'./portal/html/USR-1333-F-FORM.html',
-                    date:'',
+                    date:'2022-09-22',
                     mdate:'2022-09-30',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[1차디자인]'
                 },
                 {
                     division: '',
                     depth1:'커뮤니티 - 일정 보기',
                     path:'./portal/html/USR-1332-B-LIST.html',
-                    date:'',
+                    date:'2022-09-22',
                     mdate:'2022-09-27',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[1차디자인]'
                 },
                 {
@@ -929,9 +947,9 @@
                     division: '',
                     depth1:'마이페이지 - 일정 관리',
                     path:'./portal/html/.html',
-                    date:'',
+                    date:'2022-09-22',
                     mdate:'2022-11-17',
-                    con:'작업중',
+                    con:'완료',
                     etc:'-> 바로가기 USR-1332-B-LIST.html'
                 },
                 {
@@ -974,9 +992,9 @@
                     division: '',
                     depth1:'마이페이지 - 내가 가입한 커뮤니티',
                     path:'./portal/html/.html',
-                    date:'',
+                    date:'2022-09-22',
                     mdate:'',
-                    con:'작업중',
+                    con:'완료',
                     etc:'-> 바로가기 USR-1331-F-DASH'
                 },
                 {
@@ -1039,9 +1057,9 @@
                     division: '통합검색',
                     depth1:'',
                     path:'./portal/html/USR-2110-F-LIST.html',
-                    date:'',
+                    date:'2022-09-23',
                     mdate:'2022-11-28',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[2차디자인]'
                 },
 
@@ -1050,9 +1068,9 @@
                     division: '사이트맵',
                     depth1:'',
                     path:'./portal/html/USR-2210-F-LIST.html',
-                    date:'',
+                    date:'2022-09-23',
                     mdate:'2022-11-15',
-                    con:'작업중',
+                    con:'완료',
                     etc:'[1차디자인]'
                 },
 
