--- a/portal/html/USR-20122-F-FORM.html
+++ b/portal/html/USR-20122-F-FORM.html
@@ -534,10 +534,7 @@
 
                             <div class="btn_box_group type_01">
                                 <div class="btn_box">
-                                    <a href="" class="btn_navy">재무정보 추가입력</a>
-                                </div>
-                                <div class="btn_box">
-                                    <a href="./USR-2013-F-FORM.html" class="btn_blue">회원가입 제출</a>
+                                    <a href="" class="btn_navy">다음</a>
                                 </div>
                             </div>
 
@@ -702,10 +699,7 @@
 
                             <div class="btn_box_group type_01">
                                 <div class="btn_box">
-                                    <a href="" class="btn_navy">투자정보 추가입력</a>
-                                </div>
-                                <div class="btn_box">
-                                    <a href="./USR-2013-F-FORM.html" class="btn_blue">회원가입 제출</a>
+                                    <a href="" class="btn_navy">다음</a>
                                 </div>
                             </div>
 
@@ -853,7 +847,10 @@
 
                             <div class="btn_box_group type_01">
                                 <div class="btn_box">
-                                    <a href="./USR-2013-F-FORM.html" class="btn_blue">회원가입 제출</a>
+                                    <a href="javascript:void(0);" class="btn_blue dialog-link" data-target="#alpop_01">등록/수정</a>
+                                </div>
+                                <div class="btn_box">
+                                    <a href="" class="btn_white">취소</a>
                                 </div>
                             </div>
 
@@ -987,6 +984,29 @@
     <!-- //pop_content -->
 
 </div>
+
+<!-- 경고팝업 -->
+<div id="alpop_01" class="dialog alpop_box">
+
+    <div class="pop_header">
+        <span class="img1"></span>
+    </div>
+
+    <div class="pop_content">
+        기업 상세정보를 수정하시겠습니까?
+    </div>
+
+    <div class="pop_footer">
+        <div class="btn_box">
+            <button class="btn_white pop_close">취소</button>
+            <button class="btn_mint pop_close" onclick="onShowToast('기업 상세정보가 정상적으로 수정되었습니다.')">확인</button>
+        </div>
+    </div>
+
+</div>
+
+<!-- 토스트 메세지 -->
+<div class="toast_box"><div class="txt"></div></div>
 
 </body>
 </html>
