--- a/portal/html/USR-20411-F-FORM.html
+++ b/portal/html/USR-20411-F-FORM.html
@@ -463,7 +463,7 @@
 
                     <div class="btn_box_group type_01">
                         <div class="btn_box">
-                            <a href="" class="btn_white">비밀번호 변경</a>
+                            <a href="javascript:void(0);" class="btn_white dialog-link" data-target="#note_01">비밀번호 변경</a>
                         </div>
                     </div>
 
@@ -679,10 +679,10 @@
 
                 <div class="btn_box_group type_01">
                     <div class="btn_box">
-                        <a href="./USR-20412-F-FORM.html" class="btn_navy">상세기업정보 변경</a>
+                        <a href="javascript:void(0);" class="btn_navy dialog-link" data-target="#alpop_02">상세기업정보 변경</a>
                     </div>
                     <div class="btn_box">
-                        <a href="" class="btn_blue">수정</a>
+                        <a href="javascript:void(0);" class="btn_blue dialog-link" data-target="#alpop_01">수정</a>
                     </div>
                     <div class="btn_box">
                         <a href="" class="btn_gray">취소</a>
@@ -813,6 +813,112 @@
     <!-- //pop_content -->
 
 </div>
+
+<!-- 비밀번호 인증 팝업 -->
+<div id="note_01" class="dialog note_dialog">
+
+    <div class="tit_box">
+        <h3>비밀번호 인증</h3>
+    </div>
+
+    <div class="find_group">
+        <div class="find_txt">
+            비밀번호 인증 절차 후, 변경이 가능합니다.<br/>
+            현재 비밀번호를 입력해주세요.
+        </div>
+        <div class="inp_group">
+            <div class="inp_box">
+                <input type="password" placeholder="비밀번호를 입력하세요.">
+            </div>
+        </div>
+    </div>
+
+    <div class="btn_box_group">
+        <div class="btn_box">
+            <a href="javascript:void(0);" class="btn_gray shadow">취소</a>
+        </div>
+        <div class="btn_box">
+            <a href="javascript:void(0);" class="btn_mint shadow dialog-link" data-target="#note_02">확인</a>
+        </div>
+    </div>
+
+</div>
+
+<!-- 비밀번호 변경 팝업 -->
+<div id="note_02" class="dialog note_dialog">
+
+    <div class="tit_box">
+        <h3>비밀번호 변경</h3>
+    </div>
+
+    <div class="find_group">
+        <div class="find_txt">
+            변경할 신규 비밀번호를 입력해주세요.
+        </div>
+        <div class="inp_group">
+            <div class="inp_box">
+                <input type="password" placeholder="비밀번호">
+            </div>
+            <div class="inp_box">
+                <input type="password" placeholder="비밀번호 확인">
+            </div>
+        </div>
+        <div class="find_password_txt">
+            ※ 비밀번호는 영문, 숫자, 특수문자(!@#$%^&*()-_)를 혼용하여 8자 이상 20자 이하로 입력하세요.
+        </div>
+    </div>
+
+    <div class="btn_box_group">
+        <div class="btn_box">
+            <a href="javascript:void(0);" class="btn_mint shadow" onclick="onShowToast('비밀번호가 정상적으로 변경되었습니다.')">확인</a>
+        </div>
+    </div>
+
+</div>
+
+<!-- 경고팝업 -->
+<div id="alpop_01" class="dialog alpop_box">
+
+    <div class="pop_header">
+        <span class="img1"></span>
+    </div>
+
+    <div class="pop_content">
+        회원정보를 수정하시겠습니까?
+    </div>
+
+    <div class="pop_footer">
+        <div class="btn_box">
+            <button class="btn_white pop_close">취소</button>
+            <button class="btn_mint pop_close" onclick="onShowToast('회원정보가 정상적으로 수정되었습니다.')">확인</button>
+        </div>
+    </div>
+
+</div>
+
+<!-- 기업정보 불러오기 팝업 -->
+<div id="alpop_02" class="dialog alpop_box">
+
+    <div class="pop_header">
+        <span class="img3"></span>
+    </div>
+
+    <div class="pop_content">
+        사전 등록된 기업정보가 있습니다.<br/>
+        불러오시겠습니까?
+    </div>
+
+    <div class="pop_footer">
+        <div class="btn_box">
+            <button class="btn_white pop_close">취소</button>
+            <button class="btn_mint pop_close">확인</button>
+        </div>
+    </div>
+
+</div>
+
+<!-- 토스트 메세지 -->
+<div class="toast_box"><div class="txt"></div></div>
 
 </body>
 </html>
